# docs/swagger.json
@@ -31,6 +31,14 @@
                         "in": "query"
                     },
                     {
+                        "enum": [
+                            1,
+                            5,
+                            10,
+                            15,
+                            25,
+                            50
+                        ],
                         "type": "integer",
                         "default": 25,
                         "description": "Page size",
